--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT = 5000
 MONGO_URI = mongodb://localhost:27017/live-chat-box
 JWT_SECRET = Ritesh Verma
 
-NODE_ENV = development
+NODE_ENV = production
