--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-MONGO_URI = mongodb://localhost:27017/live-chat-box
+MONGO_URI = mongodb+srv://riteshverma17:riteshverma17@live-chat-app.tcj9d.mongodb.net/?retryWrites=true&w=majority&appName=Live-Chat-App
 JWT_SECRET = Ritesh Verma
 
 NODE_ENV = production
