--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "react-router-dom": "^7.1.5",
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
